--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 
 
     implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.github.marcinmoskala:ArcSeekBar:0.31'
+
 }
