--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
+    // runtime permission
+    implementation 'com.karumi:dexter:6.2.2'
+
+    //https://github.com/gauravk95/audio-visualizer-android
+    implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
+
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.github.marcinmoskala:ArcSeekBar:0.31'
 
