--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.github.marcinmoskala:ArcSeekBar:0.31'
 
-    implementation 'com.mikhaellopez:circularimageview:4.2.0'
+
+    // circle image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
